Weight paint paints when it shouldn't #29686

Closed
opened 2011-12-23 21:57:33 +01:00 by Pep · 4 comments

%%%Take the provided .blend file. The active group is a blocked one. However, if you perform a stroke on the dark blue zone (vertices not belonging to the group), that very first stroke (the initial click only) will actually paint. Now keep doing other strokes on that dark blue area: now it's doing fine (no paint).

Regards.

Pep.
%%%

%%%Take the provided .blend file. The active group is a blocked one. However, if you perform a stroke on the dark blue zone (vertices not belonging to the group), that very first stroke (the initial click only) will actually paint. Now keep doing other strokes on that dark blue area: now it's doing fine (no paint). Regards. Pep. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Jason, would you be able to look into this? - the active Group is locked, and verts that are not apart of the group are added on the first hit.
this is certainly a but Im not sure what should be done.

possible options

  1. always unlock active group if multipaint isnt enabled.
  2. give some error that painting on locked group is only supported with multipaint.%%%
%%%Jason, would you be able to look into this? - the active Group is locked, and verts that are not apart of the group are added on the first hit. this is certainly a but Im not sure what should be done. possible options 1) always unlock active group if multipaint isnt enabled. 2) give some error that painting on locked group is only supported with multipaint.%%%

%%%fix by reporting a warning in this case (rather then painting).

r43000.%%%

%%%fix by reporting a warning in this case (rather then painting). r43000.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29686
No description provided.