fix [#29686] Weight paint paints when it shouldn't

disallow painting when active group is locked